# imgrab

./: .gitignore  LICENSE  README.md  install.ps1  pyproject.toml
.kiro/specs/gemini-image-search/: .config.kiro  requirements.md
.kiro/specs/image-grabber-cli/: .config.kiro  requirements.md
.kiro/steering/: imgrab.md
src/imgrab/: __init__.py  __main__.py  batch.py  cli.py  clipboard.py  download.py  extract.py  output.py  screenshot.py  search.py  utils.py
