[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imgrab"
version = "0.1.0"
description = "No-excuses image grabber CLI — download, screenshot, or clipboard-copy any image from the web"
requires-python = ">=3.10"
dependencies = [
    "httpx==0.27.0",
    "click==8.1.7",
    "Pillow==10.4.0",
    "playwright==1.44.0",
    "pywin32==306",
]

[project.scripts]
imgrab = "imgrab.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
